gateway/invoice-mgr-ext-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: http-invoice-mgr-ext-service
  namespace: default
spec:
  type: ExternalName
  externalName: invoiceMgrAppSvc.v100.svc.cluster.local
  ports:
    - port: 3000
