gateway/invoice-mgr-internal-gtw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: invoice-mgr-internal-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.default.svc.cluster.local"
