gateway/invoice-mgr-gtw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: invoice-mgr-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: invoicemgr
spec:
  hosts:
    - "*"
  gateways:
    - invoice-mgr-gateway
  http:
      route:
        - destination:
            host: app
            port:
              number: 3000
