gateway/invoice-mgr-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: invoicemgr
spec:
  hosts:
    - "*"
  gateways:
    - invoice-mgr-gateway
  http:
    - route:
        - destination:
            host: app
#            subset: subset-v1
            port:
              number: 3000
